After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 755019 - gstreamer: Fix error leak during failure cases
gstreamer: Fix error leak during failure cases
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
git master
Other Linux
: Normal normal
: 1.5.91
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-09-15 01:54 UTC by Vineeth
Modified: 2015-09-15 17:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix indentation (984 bytes, patch)
2015-09-15 01:56 UTC, Vineeth
committed Details | Review
fix error leaks during failures (2.71 KB, patch)
2015-09-15 01:57 UTC, Vineeth
committed Details | Review

Description Vineeth 2015-09-15 01:54:13 UTC
There are few instances in gstreamer core plugin where error is getting leaked during failure cases.
Comment 1 Vineeth 2015-09-15 01:56:05 UTC
Created attachment 311321 [details] [review]
fix indentation

gst-indent complains about indentation while committing changes to gstcheck.c
Hence first submitting a separate patch for indentation.
Comment 2 Vineeth 2015-09-15 01:57:39 UTC
Created attachment 311322 [details] [review]
fix error leaks during failures
Comment 3 Tim-Philipp Müller 2015-09-15 17:27:57 UTC
Fixing leaks in benchmarks is arguably a tad pointless, but whatever:

commit fcdfcbd618bf4235536122cd63856765827ff4ca
Author: Vineeth TM <vineeth.tm@samsung.com>
Date:   Tue Sep 15 10:56:40 2015 +0900

    downloadbuffer, benchmarks: fix error leaks in failure code paths
    
    https://bugzilla.gnome.org/show_bug.cgi?id=755019

commit f409dd48e09df0d6197717711d02945591274c63
Author: Vineeth TM <vineeth.tm@samsung.com>
Date:   Tue Sep 15 10:52:55 2015 +0900

    check: Fix indentation
    
    https://bugzilla.gnome.org/show_bug.cgi?id=755019
Comment 4 Tim-Philipp Müller 2015-09-15 17:40:14 UTC
Comment on attachment 311321 [details] [review]
fix indentation

Changed this a little, the first 'fix' is not really a desirable indentation change.