check: Fix indentation

https://bugzilla.gnome.org/show_bug.cgi?id=755019